backend/devops/templates/back-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "back-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: back
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "back"
              servicePort: 8000
